tidying up readme

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-PORT=3000
+PORT=YOUR_PORT
 HOST=localhost
+SECRET_KEY=tf80emt031s
+
+DB_TYPE=mysql
+DB_HOST=YOUR_DB_HOST
+DB_PORT=YOUR_DB_PORT
+DB_NAME=YOUR_DB_NAME
+DB_USERNAME=YOUR_DB_USERNAME
+DB_PASSWORD=YOUR_DB_PASSWORD
